# new-chad-neural

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt  import_sine_model.c  sine.c  sine_plot.c
include/: common_defs.h  matrix.h  model_trainer.h  neural_network.h  utils.h  vector.h
src/: CMakeLists.txt  main.c  matrix.c  model_trainer.c  neural_network.c  utils.c  vector.c
tests/: CMakeLists.txt  test_load_matrix.c  test_load_vector.c  test_main.c  test_matrix.ncn  test_matrix_resize.c  test_save_matrix.c  test_save_vector.c  test_save_weights.c  test_vector.ncn
